login with pocketbase

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://jsonplaceholder.typicode.com
+export VITE_API_URL=http://jsonplaceholder.typicode.com
+export POCKETBASE_URL=http://localhost:8081
