--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "pocketbase": "^0.25.2",
     "ra-data-json-server": "^5.6.3",
     "ra-data-local-storage": "^5.6.3",
     "react": "^19.0.0",
